# OpenPolySphere

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  README.ru.md  USAGE.md  eslint.config.mjs  mix.exs  osv-scanner.toml  package-lock.json  package.json  run.sh  setup.sh  web.py
.cargo/: audit.toml  config.toml
.clusterfuzzlite/: Dockerfile  build.sh
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cflite_pr.yml  ci.yml  codeql.yml  dependency-review.yml  pages.yml  release.yml  scorecard.yml  security-audit.yml
config/: config.exs
crates/audio-core/: Cargo.toml
crates/audio-core/src/: engine.rs  lib.rs  protocol.rs
crates/audio-core/src/audio/: capture.rs  level.rs  mod.rs  pending.rs  playback.rs
crates/audio-core/src/platform/: bundle.rs  capabilities.rs  macos_mic.rs  mod.rs  paths.rs
crates/audio-core/src/stt/: apple.rs  deepgram.rs  local.rs  mod.rs
crates/audio-core/src/stt/local/: common.rs  ct2.rs  metal.rs  mod.rs
crates/audio-core/src/translation/: apple.rs  backend.rs  local.rs  mod.rs  model.rs  normalize.rs  openrouter.rs  polish.rs  polish_model.rs
crates/audio-core/src/tts/: mod.rs  piper.rs
crates/audio-protocol/: Cargo.toml
crates/audio-protocol/src/: lib.rs
crates/openpolysphere-app/: Cargo.toml  build.rs
crates/openpolysphere-app/src/: env.rs  macos_mic.rs  main.rs
crates/translator/: Cargo.toml  build.rs
crates/translator/src/: db.rs  downloads.rs  engine_service.rs  events.rs  legacy_config.rs  main.rs  openrouter.rs  paths.rs  port.rs  routes.rs  settings.rs  setup.rs  update.rs  voices.rs
docs/: habr.md  index.html  linux.md  openssf-badge.md  site.md  tauri-next.md  windows.md
docs/adr/: 0001-platform-imp-stub.md  0002-ci-platform-tiers.md  README.md
docs/css/: site.css
docs/ru/: index.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_protocol_command.rs  fuzz_protocol_wire.rs
lib/: translator.ex
lib/translator/: application.ex  audio_engine.ex  command_server.ex  config.ex  pipeline.ex  pipeline_supervisor.ex
native/audio_engine/: Cargo.toml
native/audio_engine/src/: engine.rs  main.rs  protocol.rs
native/audio_engine/src/audio/: capture.rs  mod.rs  playback.rs
native/audio_engine/src/stt/: mod.rs  voxtral.rs
native/audio_engine/src/translation/: mod.rs  model.rs
native/audio_engine/src/vad/: mod.rs
packaging/linux/: nfpm.yaml
packaging/macos/: Info.plist  OpenPolySphere
packaging/windows/: openpolysphere.iss
scripts/: apply-main-branch-protection.sh  bootstrap  build-macos-app-icon.sh  build-macos-shell.sh  check-linux-clippy.sh  check-windows-clippy.sh  check-windows-lint.sh  create-ci-labels.sh  fetch-onnxruntime.sh  github-security-status.sh  i18n-settings-en.json  i18n-settings-ru.json  install-linux-deps.sh  merge-settings-locales.mjs  package-linux.sh  package-macos-app.sh  package-windows.ps1
site/: README.md  index.html
site/css/: site.css
site/ru/: index.html
tools/apple-speech/: Info.plist  Package.swift
tools/apple-speech-auth/: Info.plist  Package.swift
tools/apple-speech-auth/Sources/AppleSpeechAuth/: main.swift
tools/apple-speech/Sources/AppleSpeech/: main.swift
tools/apple-translate/: Package.swift
tools/apple-translate/Sources/AppleTranslate/: main.swift
tools/openpolysphere-shell/: Package.swift
tools/openpolysphere-shell/Sources/OpenPolySphereShell/: main.swift
tools/polysphere-speech/: Info.plist  Package.swift
tools/polysphere-speech-auth/: Info.plist  Package.swift
tools/polysphere-translate/: Package.swift
web/: __init__.py  db.py  helpers.py  routes.py  settings.py
web/static/: index.html
web/static/css/: style.css
web/static/js/: app.js  boot.js  main.js  tooltips.js
web/static/locales/: ar.json  cs.json  da.json  de.json  en.json  es.json  fi.json  fr.json  hi.json  it.json  nl.json  pl.json  pt.json  ru.json  sv.json  tr.json  uk.json  vi.json  zh.json
web/templates/: history.html  index.html
(+33 files in other folders)
