[package]
name = "openpolysphere-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"

[dependencies.audio-protocol]
path = "../crates/audio-protocol"

[[bin]]
name = "fuzz_protocol_command"
path = "fuzz_targets/fuzz_protocol_command.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_protocol_wire"
path = "fuzz_targets/fuzz_protocol_wire.rs"
test = false
doc = false
bench = false
