[package]
name = "audio-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "audio_core"
path = "src/lib.rs"

[[bin]]
name = "audio_engine"
path = "src/bin/audio_engine.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
log = "0.4.29"
env_logger = "0.11.9"
anyhow = "1.0.102"
crossbeam-channel = "0.5.15"
cpal = "0.15.3"
ringbuf = "0.5.0"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
ndarray = "0.17.2"
rubato = "0.15.0"
ureq = { version = "2.12.1", features = ["json"] }
tungstenite = { version = "0.21.0", features = ["native-tls"] }
base64 = "0.22.1"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", features = ["metal"] }

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
ct2rs = { version = "0.9", default-features = false, features = ["sentencepiece", "tokenizers", "accelerate", "ruy", "whisper"] }

[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
ct2rs = { version = "0.9", default-features = false, features = ["sentencepiece", "tokenizers", "openblas", "ruy", "whisper"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
ct2rs = { version = "0.9", default-features = false, features = ["sentencepiece", "tokenizers", "openblas", "ruy", "whisper"] }
