[package]
name = "openpolysphere-app"
version = "0.1.0"
edition = "2021"
description = "OpenPolySphere desktop shell (embedded WebView + server lifecycle)"
build = "build.rs"

[[bin]]
name = "openpolysphere"
path = "src/main.rs"

[dependencies]
tao = "0.34.5"
wry = "0.53.5"
anyhow = "1"
log = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"

[target.'cfg(target_os = "macos")'.dependencies]
cpal = "0.18.1"
