[package]
name = "openpolysphere-app"
version = "0.1.0"
edition = "2021"
description = "OpenPolySphere desktop shell (embedded WebView + server lifecycle)"

[[bin]]
name = "openpolysphere"
path = "src/main.rs"

[dependencies]
tao = "0.35.3"
wry = "0.53.5"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"
