[package]
name = "translator"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "translator"
path = "src/main.rs"

[dependencies]
audio-core = { path = "../audio-core" }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
async-stream = "0.3"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
